    [ST-151] - make scalr-ctl configure safer
    [ST-155] - scalr-ctl hides output when default view is set to None
    [ST-154] - table view is broken
    [ST-158] - role-image replace fails when view is set to "table"
    [ST-159] - JSON view does not work for action-type commands
    [ST-163] - Deprecate --no-debug global option


Version 1.0.38
--------------
New feature

    [ST-117] - Added support for /teams/ and /acl-roles/
    [ST-117] - Action renamed: scalr-ctl team create => scalr-ctl team add-to-environment
    [ST-117] - Action renamed: scalr-ctl team delete => scalr-ctl team delete-from-environment
    [ST-120] - Added support for server endpoints
    [ST-42] - Better validation of command line parameters
    [ST-131] - Implement command line options for farm actions
    [ST-132] - Global option for custom scalr-ctl configuration
    [ST-133] - providing --debug flag should print complete response from API server
    [ST-137] - Script Execute support
    [ST-144] - Click fails on Windows

Fixed

    [ST-123] - DELETE-methods return empty response
    [ST-130] - scalr-tools fails on python 2.6/CentOS


Version 1.0.27
-----------

Bug

    [ST-127] - Handling deprecated routes


Version 1.0.24
-----------

Bug

    [ST-121] - Autocomplete for options

New Feature

    [ST-88] - Import/Export Scalr Objects
    Examples:
    scalr-ctl export [tab][tab]
    scalr-ctl export script --scriptId 4686 > script.yml
    cat ~/Downloads/script.yml | scalr-ctl import --envId 5345
    cat ~/Downloads/script.yml | scalr-ctl import --update


Improvement

    [ST-105] - Bad experience with create operation
    [ST-116] - Speed improvements
    [ST-118] - Code refactoring


Version 1.0.16
-----------

Bug

    [ST-98] - APIv2 > server-import support
    [ST-100] - Exception on OSX
    [ST-109] - throw correct error when server returns corrupt JSON response
    [ST-112] - Bash error on login after installing scalr-ctl

New Feature
