@@ -104,7 +104,6 @@ class ScalrCLI(click.Group):
 
             hlp = self.scheme[name]["cmd_descr"] if "cmd_descr" in self.scheme[name] else action.get_description()
             options = action.modify_options(action.get_options())
-
             cmd = click.Command(name, params=options, callback=action.run, short_help=hlp, help=hlp, hidden=hidden)
             if "epilog" in self.scheme[name]:
                 cmd.epilog = self.scheme[name]["epilog"]
